--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <tr>
             <td>
                 
- <img src="file:///C:/Users/user/Desktop/north-korean-kim-jong-un-may-2016.jpg" width="300px" height="350px"></td>
+ <img src="fnorth-korean-kim-jong-un-may-2016.jpg width="300px" height="350px"></td>
             <td> 
                 
 <h1> MD. Ashraful Haque</h1>
